Switching to new Base images, shift to arm32v7 tag, remove concept of java base

--- a/Dockerfile.aarch64
+++ b/Dockerfile.aarch64
@@ -1,7 +1,4 @@
-FROM lsiobase/java.arm64:bionic
-
-# Add qemu to build on x86_64 systems
-COPY qemu-aarch64-static /usr/bin
+FROM lsiobase/ubuntu:arm64v8-bionic
 
 # set version label
 ARG BUILD_DATE
@@ -16,6 +13,20 @@ AIRSONIC_SETTINGS="/config" \
 LANG="C.UTF-8"
 
 RUN \
+ echo "**** install runtime packages ****" && \
+ apt-get update && \
+ apt-get install -y \
+	--no-install-recommends \
+	ca-certificates \
+	ffmpeg \
+	flac \
+	fontconfig \
+	lame \
+	openjdk-8-jre-headless \
+	ttf-dejavu && \
+ echo "**** fix XXXsonic status page ****" && \
+ find /etc -name "accessibility.properties" -exec rm -fv '{}' + && \
+ find /usr -name "accessibility.properties" -exec rm -fv '{}' + && \
  echo "**** install airsonic ****" && \
  if [ -z ${AIRSONIC_RELEASE+x} ]; then \
  	AIRSONIC_RELEASE=$(curl -sX GET "https://api.github.com/repos/airsonic/airsonic/releases/latest" \
