--- a/readme-vars.yml
+++ b/readme-vars.yml
@@ -44,8 +44,11 @@ opt_param_env_vars:
 opt_param_usage_include_vols: true
 opt_param_volumes:
   - { vol_path: "/media", vol_host_path: "</path/to/other media>", desc: "Location of other media." }
+  - { vol_path: "/etc/java-8-openjdk/sound.properties", vol_host_path: "</path/to/sound.properties>", desc: "Sound configuration for Airsonic's Java jukebox player." }
 opt_param_usage_include_ports: false
 opt_param_device_map: false
+opt_param_devices:
+  - { device_path: "/dev/snd", device_host_path: "/dev/snd", desc: "Only needed to pass your host sound device to Airsonic's Java jukebox player." }
 opt_cap_add_param: false
 optional_block_1: false
 
