--- a/readme-vars.yml
+++ b/readme-vars.yml
@@ -56,7 +56,7 @@ app_setup_block: |
 
   Default user/pass is admin/admin
 
-  Extra java options can be passed with the JAVA_OPTS environment variable, eg `-e JAVA_OPTS="-Xmx256m -Xms256m"`
+  Extra java options can be passed with the JAVA_OPTS environment variable, eg `-e JAVA_OPTS="-Xmx256m -Xms256m"`. For some reverse proxies, you may need to pass `JAVA_OPTS=-Dserver.use-forward-headers=true` for airsonic to generate the proper URL schemes.
 
 # changelog
 changelogs:
